--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
             <h1 class="mb-4">👋 Meet Kelly, Your AI Sexual Health Advisor in Hong Kong</h1>
-            <h2>Kelly - 你的AI性健康的醫生。<br><br>Ask Kelly for quick answers to any initmate sexual health related questions without the embarrasement in-person.<br><br>Free and <strong>anonymous</strong>.</h2>
+            <h2>Kelly - 你的AI性健康的醫生。<br><br>Ask Kelly for quick answers to any intimate sexual health-related questions without the embarrassment in-person.<br><br>向Kelly詢問任何與性健康相關的問題，亦到不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
@@ -124,12 +124,12 @@
             <img src="assets/img/kelly-hero2.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
-            <h3 class="white">🫶 Concise Information Given to You</h3>
+            <h3 class="white">🫶 For Teenagers, Young Adults and Grown Ups</h3>
             <p>
-              No more digging around government and clinic websites. Sexual health information, clinic locations, phone number, appointment booking and opening times are easily available to you by asking Kelly.
+              問Kelly任何你不會問你的父母或醫生的尷尬和私密的問題。Kelly使用人工智能技術並會不斷學習和改進。
             </p>
             <p>
-              Ask Kelly any embarrasing and intimate questions that you would not have asked your parents or doctor. Kelly is constantly learning and improving as you interact with it.
+              Ask Kelly any embarrasing and intimate questions that you would not have asked your parents or doctor. Kelly is powered by AI and is constantly learning and improving as you interact with it.
             </p>
             <ul>
               <li>🆘 Where do I get emergency medicine?</li>
