--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               問Kelly任何你不會問你的父母或醫生的尷尬和私密的問題。Kelly使用人工智能技術並會不斷學習和改進。
             </p>
             <p>
-              Ask Kelly any embarrasing and intimate questions that you would not have asked your parents or doctor. Kelly is powered by AI and is constantly learning and improving as you interact with it.
+              Ask Kelly any embarrasing and intimate questions that you would not have asked your parents or doctor. Kelly is powered by AI (GPT) and is constantly learning and improving as you interact with it.
             </p>
             <ul>
               <li>🆘 Where do I get emergency medicine?</li>
@@ -396,7 +396,8 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Support Our Startup</h4>
-            <p>TabMed is founded by 2 HKU medical students. At the developmental and incubation phase, we are outreaching partners and funding from surrounding networks, HKU, HKSTP and Cyberport. You can reach us by Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong>.</p>
+            <p>We blieve AI and telemedicine is the future of healthcare.</p>
+            <p>TabMed is founded by 2 HKU medical students. At the developmental and pre-seed phase, we are outreaching partners and funding from surrounding networks, HKU, HKSTP and Cyberport. You can reach us by Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong>.</p>
           </div>
         </div>
       </div>
