--- a/telemed.html
+++ b/telemed.html
@@ -634,7 +634,7 @@
   <!-- AI BotPress -->
 
   <!-- Start of ChatBot (www.chatbot.com) code -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     window.__be = window.__be || {};
     window.__be.id = "63e8b65585e1c300072091d6";
     (function() {
@@ -642,8 +642,32 @@
         be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
     })();
-</script>
+</script> -->
 <!-- End of ChatBot code -->
+
+<!-- botpress -->
+
+<script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
+<script>
+  window.botpressWebChat.init({
+      "botId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+      "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
+      "messagingUrl": "https://messaging.botpress.cloud",
+      "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+      "botName": "Kelly",
+      "stylesheet": "https://tabmed.hk/botpress.css",
+      "className": "botcss",
+      "composerPlaceholder": "Start by saying Hi...",
+      "showConversationsButton": "false",
+      "disableNotificationSound": "false",
+      "layoutWidth": "400",
+      "avatarUrl": "https://tabmed.hk/kellyicon.png",
+      "enableTranscriptDownload": "false",
+
+
+  });
+
+</script>
 
 
 </body>
