--- a/index.html
+++ b/index.html
@@ -355,12 +355,47 @@
       </div>
     </section> End Frequently Asked Questions Section -->
 
+    <!-- ======= Gallery Section ======= -->
+    <section id="gallery" class="gallery">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2 class="tabmedtitle">😛 Friend, Not Just a Doctor - That's Kelly</h2>
+        </div>
+
+      </div>
+
+      <div class="container-fluid" data-aos="fade-up">
+        <div class="gallery-slider swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-1.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-2.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-3.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-4.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-5.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-6.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-7.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-8.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-9.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-10.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-11.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-12.png" class="img-fluid" alt=""></a></div>
+
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Gallery Section -->
+
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
-          <h2 class="tabmedtitle">📞 Contact Us</h2>
+          <h2 class="tabmedtitle mb-4">🧠 We Believe AI & Telemedicine is the Future of Healthcare</h2>
+          <iframe width="380" height="213" src="https://www.youtube.com/embed/RXOyxN79w5Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
         <div class="row">
@@ -395,8 +430,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h4>Support Our Startup</h4>
-            <p>We blieve AI and telemedicine is the future of healthcare.</p>
+            <h4>🫶 Support Our Startup</h4>
+            <p>We are certain AI and telemedicine is the future of healthcare.</p>
             <p>TabMed is founded by 2 HKU medical students. At the developmental and pre-seed phase, we are outreaching partners and funding from surrounding networks, HKU, HKSTP and Cyberport. You can reach us by Instagram <strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">@tabmedhk</a></strong>.</p>
           </div>
         </div>
