Huge change adding 2 new bots

--- a/kenneth.html
+++ b/kenneth.html
@@ -26,7 +26,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/kennethstyle.css" rel="stylesheet">
   <link href="assets/css/botpresss.css" rel="stylesheet">
 
   <!-- =======================================================
@@ -53,7 +53,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="kelly.html">Kelly AI</a></li>
           <li><a class="nav-link scrollto" href="jason.html">Jason AI</a></li>
-          <li><a class="nav-link scrollto" href="kenneth.html">Kenneth AI</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Kenneth AI</a></li>
           <li><a class="nav-link scrollto" href="telemed.html">Online Medical Consultation</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li> -->
@@ -82,48 +82,19 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= actual Hero Section ======= -->
-  <section id="hero" class="mainhero d-flex align-items-center">
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
-          <div>
-            <h1 class="mb-4">🇭🇰 Meet Your Hong Kong Based AI <span
-               class="txt-rotate"
-               data-period="1000"
-               data-rotate='[ "Doctor.", "Nutritionist.", "Therapist.", "Personal Trainer.", "Sexual Health Advisor.", "Dietitian."]'></span></h1>
-
-            <h2>🛌 <a href="kelly.html">Kelly</a> - 你的AI性健康的醫生。<br><br>🥑 <a href="jason.html">Jason</a> - 你的AI營養和健身的醫生。<br><br>🧠 <a href="kenneth.html">Kenneth</a> - 你的AI心理健康的醫生</h2>
-            <h2>Ask for answers to any health-related private questions without the embarrassment in-person. <br><br>詢問任何與健康相關的私人問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
-            <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
-
-
-          </div>
-        </div>
-        <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img">
-          <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
-
-
-        </div>
-      </div>
-    </div>
-
-  </section><!-- End actual Hero -->
-
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="pink d-flex align-items-center">
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-2 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
+        <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1 class="mb-4">👋 Meet Kelly, Your AI Sexual Health Advisor in Hong Kong</h1>
-            <h2>Kelly - 你的AI性健康的醫生。<br><br>Ask Kelly for quick answers to any intimate sexual health-related questions without the embarrassment in-person.<br><br>向Kelly詢問任何與性健康相關的問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
+            <h1 class="mb-4">👋 Meet Kenneth, Your AI Mental Health & Well-being Advisor in Hong Kong</h1>
+            <h2>Kenneth - 你的AI心理健康的醫生。<br><br>Ask Kenneth for quick answers to any private mental health-related questions without the embarrassment in-person.<br><br>向Kenneth詢問任何與私人心理健康相關的問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
+            <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kenneth</button>
 
 
             <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
@@ -143,66 +114,44 @@
 
   <main id="main">
 
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="orange d-flex align-items-center">
+    <!-- ======= App Features Section ======= -->
 
+
+    <!-- ======= Details Section ======= -->
+    <section  class="details kelly-1">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-2 pt-lg-0 order-2 order-lg-2" data-aos="fade-up">
-            <div>
-              <h1 class="mb-4">👋 Meet Jason, Your AI Nutritionist and Fitness Advisor in Hong Kong</h1>
-              <h2>Jason - 你的AI營養和健身的醫生。<br><br>Ask Jason for quick answers to any private nutritional and fitness related questions without the embarrassment in-person.<br><br>向Jason詢問任何與營養和健身相關的問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
 
-              <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
-
-              <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Jason</button>
-
-
-              <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
-
-
-            </div>
+        <div class="row content">
+          <div class="col-md-4" data-aos="fade-right">
+            <img src="assets/img/kelly-hero2.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-1 hero-img" data-aos="fade-up">
-            <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
-
-
-          </div>
-        </div>
-      </div>
-
-    </section><!-- End Hero -->
-
-
-    <!-- ======= Kenneth Hero Section ======= -->
-    <section id="hero" class="green d-flex align-items-center">
-
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-2 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
-            <div>
-              <h1 class="mb-4">👋 Meet Kenneth, Your AI Mental Health & Well-being Advisor in Hong Kong</h1>
-              <h2>Kenneth - 你的AI心理健康的醫生。<br><br>Ask Kenneth for quick answers to any private mental health-related questions without the embarrassment in-person.<br><br>向Kenneth詢問任何與私人心理健康相關的問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
-
-              <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
+          <div class="col-md-8 pt-4" data-aos="fade-up">
+            <h3 class="white">🫶 For Teenagers, Young Adults and Grown Ups</h3>
+            <p>
+              問Kenneth任何你不會問你的父母或醫生的尷尬和私密的問題。Kenneth使用人工智能技術並會不斷學習和改進。
+            </p>
+            <p>
+              Ask Kenneth any embarrasing and intimate questions that you would not have asked your parents or doctor. Kenneth is powered by AI (GPT) and is constantly learning and improving as you interact with it.
+            </p>
+            <ul>
+              <li>🆘 Where do I get emergency medicine?</li>
+              <li>🙊 What to do if  my boyfriend/girlfriend is pressuring me into sex?</li>
+              <li>🤌 Is my penis/vagina normal?</li>
+              <li>📍 Where can I get tested for STDs?</li>
+              <li>⚧️ Are there gender-affirming hormone therapies in Hong Kong?</li>
+              <li>💊 How much are birth control pills?</li>
+              <li>🥼 Wil the doctor tell my parents if I have an STD?</li>
+            </ul>
 
               <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kenneth</button>
 
 
-              <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
-
-
-            </div>
-          </div>
-          <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-            <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
-
 
           </div>
         </div>
-      </div>
 
-    </section><!-- End Hero -->
+      </div>
+    </section><!-- End Details Section -->
 
 
 
@@ -408,6 +357,39 @@
       </div>
     </section> End Frequently Asked Questions Section -->
 
+    <!-- ======= Gallery Section ======= -->
+    <section id="gallery" class="gallery">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2 class="tabmedtitle">😛 A Doctor, Friend & Therapist - That's Kenneth</h2>
+        </div>
+
+      </div>
+
+      <div class="container-fluid" data-aos="fade-up">
+        <div class="gallery-slider swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-1.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-2.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-3.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-4.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-5.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-6.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-7.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-8.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-9.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-10.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-11.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-12.png" class="img-fluid" alt=""></a></div>
+
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Gallery Section -->
+
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -476,7 +458,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Kelly AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">Kelly AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Jason AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Kenenth AI</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
 
@@ -583,7 +567,6 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
         })();
     </script> -->
-    <script  src="assets/js/script.js"></script>
     <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
     <script>
       window.botpressWebChat.init({
