--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <h1 class="mb-4">🇭🇰 Meet Your Hong Kong Based AI <span
                class="txt-rotate"
                data-period="1000"
-               data-rotate='[ "Doctor.", "Nutritionist.", "Therapist.", "Personal Trainer.", "Sexual Health Advisor.", "Dietitian."]'></span></h1>
+               data-rotate='[ "Doctor.", "Nutritionist.", "Therapist.", "Personal Trainer.", "Sexual Health Advisor.", "Dietitian.", "Life Coach."]'></span></h1>
 
-            <h2>🛌 <a href="kelly.html">Kelly</a> - 你的AI性健康的醫生。<br><br>🥑 <a href="jason.html">Jason</a> - 你的AI營養和健身的醫生。<br><br>🧠 <a href="kenneth.html">Kenneth</a> - 你的AI心理健康的醫生</h2>
+            <h2>🛌 <a href="kelly.html">Kelly</a> - 你的AI性健康的醫生。<br><br>🥑 <a href="jason.html">Jason</a> - 你的AI營養和健身的醫生。<br><br>🧠 <a href="kenneth.html">Kenneth</a> - 你的AI心理健康的醫生。</h2>
             <h2>Ask for answers to any health-related private questions without the embarrassment in-person. <br><br>詢問任何與健康相關的私人問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
@@ -583,7 +583,7 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
         })();
     </script> -->
-    <script  src="assets/js/script.js"></script>
+    <!-- <script  src="assets/js/script.js"></script>
     <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
     <script>
       window.botpressWebChat.init({
@@ -610,7 +610,7 @@
 const element = document.getElementById("myBtn");
 element.addEventListener("click", myFunction1);
 function myFunction1() { window.botpressWebChat.sendEvent({ type: 'show' }) }
-</script>
+</script> -->
 
 
     <!-- End of ChatBot code -->
