--- a/kenneth.html
+++ b/kenneth.html
@@ -570,11 +570,11 @@
     <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
     <script>
       window.botpressWebChat.init({
-          "botId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+          "botId": "98335b4d-29c5-49d9-8086-b27bd22b872e",
           "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
           "messagingUrl": "https://messaging.botpress.cloud",
-          "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
-          "botName": "Kelly",
+          "clientId": "98335b4d-29c5-49d9-8086-b27bd22b872e",
+          "botName": "Kenneth",
           "stylesheet": "https://tabmed.hk/botpress.css",
           "className": "botcss",
           "composerPlaceholder": "Start by saying Hi...",
