--- a/kenneth.html
+++ b/kenneth.html
@@ -581,7 +581,7 @@
           "showConversationsButton": "false",
           "disableNotificationSound": "false",
           "layoutWidth": "400",
-          "avatarUrl": "https://tabmed.hk/kellyicon.png",
+          "avatarUrl": "https://tabmed.hk/assets/img/kenneth.png",
           "enableTranscriptDownload": "false",
 
 
