--- a/jason.html
+++ b/jason.html
@@ -581,7 +581,7 @@
           "showConversationsButton": "false",
           "disableNotificationSound": "false",
           "layoutWidth": "400",
-          "avatarUrl": "https://tabmed.hk/kellyicon.png",
+          "avatarUrl": "https://tabmed.hk/jason.png",
           "enableTranscriptDownload": "false",
 
 
