--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
+            <button id="myBtn" onclick="location.href='kelly.html';" class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn More</button>
 
 
             <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
@@ -155,7 +155,7 @@
 
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-              <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Jason</button>
+              <button id="myBtn" onclick="location.href='jason.html';" class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn More</button>
 
 
               <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
@@ -186,7 +186,7 @@
 
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-              <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kenneth</button>
+              <button id="myBtn" onclick="location.href='kenneth.html';" class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn More</button>
 
 
               <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
