--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                data-period="1000"
                data-rotate='[ "Doctor.", "Nutritionist.", "Therapist.", "Personal Trainer.", "Sexual Health Advisor.", "Dietitian.", "Life Coach."]'></span></h1>
 
-            <h2>🛌 <a href="kelly.html">Kelly</a> - 你的AI性健康的醫生。<br><br>🥑 <a href="jason.html">Jason</a> - 你的AI營養和健身的醫生。<br><br>🧠 <a href="kenneth.html">Kenneth</a> - 你的AI心理健康的醫生。</h2>
+            <h2><a href="kelly.html">🛌 Kelly - 你的AI性健康的醫生。</a> <br><br><a href="jason.html">🥑 Jason - 你的AI營養和健身的醫生。</a><br><br><a href="kenneth.html">🧠 Kenneth- 你的AI心理健康的醫生。</a></h2>
             <h2>Ask for answers to any health-related private questions without the embarrassment in-person. <br><br>詢問任何與健康相關的私人問題，亦都不會感到尷尬。<br><br>Free and <strong>anonymous</strong>. 免費和<strong>匿名</strong>。</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
@@ -533,6 +533,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/script.js"></script>
 
   <!-- AI BotPress -->
 <!--
