--- a/kenneth.html
+++ b/kenneth.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+          <img src="assets/img/kenneth/kenneth1.png" class="img-fluid" alt="">
 
 
         </div>
@@ -123,24 +123,24 @@
 
         <div class="row content">
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/kelly-hero2.png" class="img-fluid" alt="">
+            <img src="assets/img/kenneth/kenneth2.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
-            <h3 class="white">🫶 For Teenagers, Young Adults and Grown Ups</h3>
+            <h3 class="white">🫶 Wellness, Support & Life Advice, Just a Chat Away</h3>
             <p>
-              問Kenneth任何你不會問你的父母或醫生的尷尬和私密的問題。Kenneth使用人工智能技術並會不斷學習和改進。
+              問Kenneth任何尷尬和私密的心理健康、情緒、人際關係或自我發展問題。Kenneth使用人工智能技術並會不斷學習和改進。
             </p>
             <p>
-              Ask Kenneth any embarrasing and intimate questions that you would not have asked your parents or doctor. Kenneth is powered by AI (GPT) and is constantly learning and improving as you interact with it.
+              Ask Kenneth any embarrasing and intimate questions in mental health, relationships, self-development and life advice. Kenneth is powered by AI (GPT) and is constantly learning and improving as you interact with it.
             </p>
             <ul>
-              <li>🆘 Where do I get emergency medicine?</li>
-              <li>🙊 What to do if  my boyfriend/girlfriend is pressuring me into sex?</li>
-              <li>🤌 Is my penis/vagina normal?</li>
-              <li>📍 Where can I get tested for STDs?</li>
-              <li>⚧️ Are there gender-affirming hormone therapies in Hong Kong?</li>
-              <li>💊 How much are birth control pills?</li>
-              <li>🥼 Wil the doctor tell my parents if I have an STD?</li>
+              <li>😕 How can I cope with my anxiety/depression/stress?</li>
+              <li>👨‍👩‍👧 How can I improve my relationships with family, friends, or partner?</li>
+              <li>😴 How can I manage my sleep difficulties?</li>
+              <li>💬 Give me an example sentence I should say to apologise to my partner for betrayal.</li>
+              <li>💊 怎樣才能應對成癮或濫用藥物?</li>
+              <li>😡 點先可以管理我的憤怒和挫折？</li>
+              <li>🥲 我怎樣才能處理持續影響我的過去創傷或童年經歷？</li>
             </ul>
 
               <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kenneth</button>
@@ -362,7 +362,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2 class="tabmedtitle">😛 A Doctor, Friend & Therapist - That's Kenneth</h2>
+          <h2 class="tabmedtitle">😛 More than a Therpist, a Life Coach - That's Kenneth</h2>
         </div>
 
       </div>
@@ -370,18 +370,18 @@
       <div class="container-fluid" data-aos="fade-up">
         <div class="gallery-slider swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-1.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-2.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-3.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-4.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-5.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-6.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-7.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-8.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-9.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-10.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-11.png" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="assets/img/screenshots/gallery-12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/screenshots/gallery-12.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-1.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-2.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-3.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-4.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-5.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-6.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-7.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-8.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-9.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-10.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-11.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/kennethscreenshots/gallery-12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/kennethscreenshots/gallery-12.png" class="img-fluid" alt=""></a></div>
 
           </div>
           <div class="swiper-pagination"></div>
